@@ -1,3 +1,14 @@
+2000-07-16 19:00 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
+
+    *include/hbapi.h
+    *source/vm/hvm.c
+    *source/vm/memvars.c
+        * memvars table is deleted in two steps: first clear all
+        public and private variables (without the detached variables)
+        and next free space allocated for memvars table. These two steps
+        are separated with the garbage collector call so self
+        referencing variables will be deallocated properly.
+
 2000-07-16 17:40 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
 
     *include/hbhash.h
